Fix Gleis; Messung Höchstgeschwindigkeit implementiert